--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "inflection": "^1.3.8"
+    "inflection": "^1.3.8",
+    "underscore": "^1.6.0"
   }
 }
