--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3"
+    "grunt-contrib-nodeunit": "^0.3.3",
+    "load-grunt-tasks": "^0.6.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
