--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "grunt",
+    "tasks",
+    "inline",
+    "glob"
   ],
   "dependencies": {
     "inflection": "^1.3.8"
