--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
     }
   ],
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 14.0.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "main": "index.js",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "load-grunt-tasks": "^0.6.0"
+    "grunt": "^1.4.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-nodeunit": "^3.0.0",
+    "load-grunt-tasks": "^5.1.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~1.4.1"
   },
   "keywords": [
     "grunt",
